--- a/sentiment-solr/pom.xml
+++ b/sentiment-solr/pom.xml
@@ -65,25 +65,24 @@
 
 	<build>
 		<plugins>
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jar-plugin</artifactId> 
-				<version>2.4</version> <configuration> <excludes> <exclude>logback.xml</exclude> 
-				<exclude>data_db.properties</exclude> <exclude>solr_params.properties</exclude> 
-				<exclude>cache-config.properties</exclude> </excludes> </configuration> </plugin> 
-				<plugin> <artifactId>maven-assembly-plugin</artifactId> <configuration> <descriptors> 
-				<descriptor>src/main/assembly/distribution.xml</descriptor> </descriptors> 
-				</configuration> <executions> <execution> <id>make-assembly</id> <phase>package</phase> 
-				<goals> <goal>single</goal> </goals> </execution> </executions> </plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>logback.xml</exclude>
+						<exclude>data_db.properties</exclude>
+						<exclude>solr_params.properties</exclude>
+						<exclude>cache-config.properties</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>zx.soft.sent.solr.driver.SentSolrDriver</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
+					<descriptors>
+						<descriptor>src/main/assembly/distribution.xml</descriptor>
+					</descriptors>
 				</configuration>
 				<executions>
 					<execution>
@@ -95,6 +94,12 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <configuration> 
+				<archive> <manifest> <mainClass>zx.soft.sent.solr.driver.SentSolrDriver</mainClass> 
+				</manifest> </archive> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
+				</descriptorRefs> </configuration> <executions> <execution> <id>make-assembly</id> 
+				<phase>package</phase> <goals> <goal>single</goal> </goals> </execution> 
+				</executions> </plugin> -->
 		</plugins>
 
 		<finalName>${project.artifactId}-${project.version}</finalName>
