--- a/sentiment-web/src/main/resources/cache-config.properties
+++ b/sentiment-web/src/main/resources/cache-config.properties
@@ -1,12 +1,12 @@
 redis.servers=zxsofthadoop09,zxsofthadoop10
-redis.master=192.168.32.19
-redis.slave=192.168.32.20
-redis.port=16379
+redis.port=6379
+redis.rp.master=192.168.32.19
+redis.rp.slave=192.168.32.20
+redis.rp.port=16379
+redis.password=zxsoft
 
 redis.mq.server=192.168.32.18
 redis.mq.port=6379
-
-redis.password=zxsoft
 
 tsdb.host=zxsofthadoop09
 tsdb.port=4242
