--- a/sentiment-spider/pom.xml
+++ b/sentiment-spider/pom.xml
@@ -13,6 +13,28 @@
 	<name>Sentiment Spider</name>
 
 	<dependencies>
+		<!-- 本地包 -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>sentiment-dao</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>sentiment-solr</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>zx.soft</groupId>
+			<artifactId>redis-client</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<!-- 微博服务包 -->
+		<dependency>
+			<groupId>zx.soft</groupId>
+			<artifactId>weibo-core</artifactId>
+			<version>1.2.0</version>
+		</dependency>
 		<!-- 日志包 -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -44,8 +66,9 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
 					<excludes>
-						<exclude>data_db.properties</exclude>
-						<exclude>solr_params.properties</exclude>
+						<exclude>cache-config.properties</exclude>
+						<exclude>super.properties</exclude>
+						<exclude>logback.xml</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
