--- a/sentiment-solr/pom.xml
+++ b/sentiment-solr/pom.xml
@@ -20,6 +20,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>sentiment-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>zx.soft</groupId>
 			<artifactId>redis-client</artifactId>
 			<version>1.3.0</version>
