--- a/sentiment-api/pom.xml
+++ b/sentiment-api/pom.xml
@@ -13,6 +13,11 @@
 	<name>Sentiment API</name>
 
 	<dependencies>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>sentiment-dao</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<!-- Json包 -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
