--- a/sentiment-solr/src/main/resources/cache-config.properties
+++ b/sentiment-solr/src/main/resources/cache-config.properties
@@ -1,19 +1,12 @@
-redis.servers=zxsofthadoop09,zxsofthadoop10
-redis.port=6379
 
-# Master-Slave
+# Mater-Slave (For Replicating Record-Key)
 redis.rp.master=192.168.32.19
 redis.rp.slave=192.168.32.20
 redis.rp.port=16379
-redis.password=zxsoft
 
-# Index-Data Cache
+# Message-Queue (for Index-Data and Firsttime Caching)
 redis.mq.server=192.168.32.18
 redis.mq.port=6379
 
-# Firsttime Cache
-redis.ex.server=192.168.32.20
-redis.ex.port=26379
-
-tsdb.host=zxsofthadoop09
-tsdb.port=4242
+# Password
+redis.password=zxsoft
